FlightManager virkur í Javascript

--- a/javascript/test.html
+++ b/javascript/test.html
@@ -7,6 +7,8 @@
 
 </head>
 <body>
+    <script src="./helpers/Random.js"></script> 
     <script src="./objects/flight.js"></script>
+    <script src="./managers/FlightManager.js"></script>
 </body>
 </html>
