--- a/totalTripperLokaverkefni/index.html
+++ b/totalTripperLokaverkefni/index.html
@@ -4,14 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:700" rel="stylesheet">
     <title>Total Tripper</title>
 </head>
+<header>
+    <h1>Total Tripper</h1>
+</header>
 <body>
-    <h1>Hi, where would you like to go?</h1>
-    <textarea placeholder="San Fransisco"></textarea>
-    <div class="dates">
-        <p>Check-in: <input type="date"> </p>
-        <p>Check-out: <input type="date"> </p>
+<div class="searchBox">
+    <h2>Hi, where would you like to go?</h2>
+    <div class="search">
+        <input class="place" type="text" placeholder="San Fransisco">
+        <input type="date" placeholder="Check-in">
+        <input type="date" placeholder="Check-out">
+        <div class="guests"> 
+            <p> 1 adult </p><p>•</p>
+            <p> 0 children </p><p>•</p>
+            <p> 1 room </p>
+        </div>
+        <div class="button_cont" align="center"><a class="searchButton" href="add-website-here" target="_blank" rel="nofollow noopener">Lets go!</a></div>
     </div>
+</div>
 </body>
 </html>
