lagaði smá stjörnur í flight

--- a/totalTripperLokaverkefni/flight.html
+++ b/totalTripperLokaverkefni/flight.html
@@ -29,8 +29,12 @@
                 <div class="card__header">
                 <h2 class="card__title">Proin dui leo</h2>
                 <div class="card__PriceStar">
-                  <h3 class="card__price">50000 $</h3>
+                    <h3 class="card__price">50000$</h3>
                   <div class="card__stars">
+                    <img class="card__star" src="img.jpg">
+                    <img class="card__star" src="img.jpg">
+                    <img class="card__star" src="img.jpg">
+                    <img class="card__star" src="img.jpg">
                     <img class="card__star" src="img.jpg">
                   </div>
                 </div>
