--- a/totalTripperLokaverkefni/index.html
+++ b/totalTripperLokaverkefni/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:700" rel="stylesheet"> 
     <title>Total Tripper</title>
 </head>
 <header>
@@ -19,44 +18,20 @@
         <input class="place" type="text" placeholder="San Fransisco">
         <input type="date" placeholder="Check-in">
         <input type="date" placeholder="Check-out">
-        <div class="guests"> 
+        <div class="guests" id="toggle"> 
             <p> 1 adult </p><p>•</p>
             <p> 0 children </p><p>•</p>
             <p> 1 room </p>
         </div>
         <div class="button_cont" align="center"><a class="searchButton" href="add-website-here" target="_blank" rel="nofollow noopener">Lets go!</a></div>
     </div>
-</div>
-</body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:700" rel="stylesheet">
-    <title>Total Tripper</title>
-</head>
-<header>
-    <h1>Total Tripper</h1>
-</header>
-<body>
-<div class="searchBox">
-    <h2>Hi, where would you like to go?</h2>
-    <div class="search">
-        <input class="place" type="text" placeholder="San Fransisco">
-        <input type="date" placeholder="Check-in">
-        <input type="date" placeholder="Check-out">
-        <div class="guests"> 
-            <p> 1 adult </p><p>•</p>
-            <p> 0 children </p><p>•</p>
-            <p> 1 room </p>
-        </div>
-        <div class="button_cont" align="center"><a class="searchButton" href="add-website-here" target="_blank" rel="nofollow noopener">Lets go!</a></div>
+    <div class="popUpGuests" id="hidden">
+        <div class="choseGuest"><p class="group">Adults <p class="chose">-</p><p>1</p><p class="chose">+</p></p></div>
+        <div class="choseGuest"><p class="group">Children <p class="chose">-</p><p>1</p><p class="chose">+</p></p></div>
+        <div class="choseGuest"><p class="group">Rooms <p class="chose">-</p><p>1</p><p class="chose">+</p></p></div>
     </div>
 </div>
 </body>
->>>>>>> origin/master
+
+<script src="scripts/guests.js"></script>
 </html>
