flight fallegra, bbreytti möppu skipulagi

--- a/totalTripperLokaverkefni/flight.html
+++ b/totalTripperLokaverkefni/flight.html
@@ -3,27 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="flightStyles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Total Tripper</title>
 </head>
 <body>
     <header class="header">
         <div class="header__content">
-          <h1 class="header__title">Choose which flight</h1>
-          <nav class="nav">
-            <div class="nav__row">
-              <ul class="nav__list">
-                <li class="nav__item nav__item--active"><a href="index.html" class="nav__link">Forsíða</a></li>
-                <li class="nav__item"><a href="pages/products.html" class="nav__link">Vörur</a></li>
-                <li class="nav__item"><a href="pages/staff.html" class="nav__link">Starfsfólk</a></li>
-              </ul>
-            </div>
-          </nav>
+          <h2 class="dest__title">Reykjavík</h2>
+          <p class="dest__quest">Choose which flight</p>
         </div>
       </header>
 
       <div class="cards">
         <div class="cards__row">
+            <section class="cards_filter">
+                  
+            </section>
           <div class="cards__col">
             <section class="card">
                 <div class="card__header">
@@ -46,6 +41,7 @@
                   </div>
                   <div class="card__image">
                     <img class="card__img" src="img.jpg">
+                    <div align="center" class="button_cont"><a class="bookButton" href="flight.html" target="_blank" rel="nofollow noopener">Book</a></div>
                   </div>
                 </div>
             </section>
