--- a/totalTripperLokaverkefni/index.html
+++ b/totalTripperLokaverkefni/index.html
@@ -23,7 +23,7 @@
             <p class="display"> 0 children </p><p>•</p>
             <p class="display"> 1 room </p>
         </div>
-        <div class="button_cont" align="center"><a class="searchButton" href="add-website-here" target="_blank" rel="nofollow noopener">Lets go!</a></div>
+        <div class="button_cont" align="center"><a class="searchButton" href="flight.html" target="_blank" rel="nofollow noopener">Lets go!</a></div>
     </div>
 <div class="hide" id="hidden">
     <div class="popUpGuests">
