Fleiri Helperar + HotelManager + Hotel komið

--- a/javascript/test.html
+++ b/javascript/test.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <script src="./helpers/Random.js"></script> 
+    <script src="./helpers/randomDataHelpers.js"></script>
+    <script src="./helpers/dateHelper.js"></script> 
     <script src="./objects/flight.js"></script>
+    <script src="./objects/Hotel.js"></script>
     <script src="./managers/FlightManager.js"></script>
+    <script src="./managers/HotelManager.js"></script>
 </body>
 </html>
