TripManager og Trip.js komið, vantar samt enn leitarvirkni og slíkt

--- a/javascript/test.html
+++ b/javascript/test.html
@@ -11,8 +11,10 @@
     <script src="./helpers/randomDataHelpers.js"></script>
     <script src="./helpers/dateHelper.js"></script> 
     <script src="./objects/flight.js"></script>
+    <script src="./objects/Trip.js"></script>
     <script src="./objects/Hotel.js"></script>
     <script src="./managers/FlightManager.js"></script>
     <script src="./managers/HotelManager.js"></script>
+    <script src="./managers/TripManager.js"></script>
 </body>
 </html>
