--- a/totalTripperLokaverkefni/index.html
+++ b/totalTripperLokaverkefni/index.html
@@ -15,7 +15,7 @@
 <div class="searchBox">
     <h2>Hi, where would you like to travel?</h2>
     <div class="search">
-        <input class="place" type="text" placeholder="San Fransisco">
+        <input class="place" type="text"  name="search">
         <input type="text" class="TinyPicker" id="startDate">
         <input type="text" class="TinyPicker" id="endDate">
         <div class="guests" id="toggle"> 
