--- a/totalTripperLokaverkefni/flight.html
+++ b/totalTripperLokaverkefni/flight.html
@@ -7,169 +7,158 @@
     <title>Total Tripper</title>
 </head>
 <body>
-    <header class="header">
-        <div class="header__content">
-          <h2 class="dest__title">Reykjavík</h2>
-          <p class="dest__quest">Choose which flight</p>
-        </div>
-      </header>
-
-      <div class="cards">
-        <div class="cards__row">
-            <section class="cards_filter">
-                  
-            </section>
-          <div class="cards__col">
-            <section class="card">
-                <div class="card__header">
-                <h2 class="card__title">Proin dui leo</h2>
-                <div class="card__PriceStar">
-                    <h3 class="card__price">50000$</h3>
-                  <div class="card__stars">
-                    <img class="card__star" src="img.jpg">
-                    <img class="card__star" src="img.jpg">
-                    <img class="card__star" src="img.jpg">
-                    <img class="card__star" src="img.jpg">
-                    <img class="card__star" src="img.jpg">
-                  </div>
-                </div>
-                </div>
-                <div class="card__content">
-                  <div class="card__text">
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                  </div>
-                  <div class="card__image">
-                    <img class="card__img" src="img.jpg">
-                    <div align="center" class="button_cont"><a class="bookButton" href="flight.html" target="_blank" rel="nofollow noopener">Book</a></div>
-                  </div>
-                </div>
-            </section>
-          </div>
-
-          <div class="cards__col">
-            <section class="card">
-                <div class="card__header">
-                <h2 class="card__title">Proin dui leo</h2>
-                <h3 class="card__price">50000 $</h3>
-                </div>
-                <div class="card__content">
-                  <div class="card__text">
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                  </div>
-                  <div class="card__image">
-                    <img class="card__img" src="img.jpg">
-                  </div>
-                </div>
-            </section>
-          </div>
-
-          <div class="cards__col">
-            <section class="card">
-                <div class="card__header">
-                <h2 class="card__title">Proin dui leo</h2>
-                <h3 class="card__price">50000 $</h3>
-                </div>
-                <div class="card__content">
-                  <div class="card__text">
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                  </div>
-                  <div class="card__image">
-                    <img class="card__img" src="img.jpg">
-                  </div>
-                </div>
-            </section>
-          </div>
-
-          <div class="cards__col">
-            <section class="card">
-                <div class="card__header">
-                <h2 class="card__title">Proin dui leo</h2>
-                <h3 class="card__price">50000 $</h3>
-                </div>
-                <div class="card__content">
-                  <div class="card__text">
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                  </div>
-                  <div class="card__image">
-                    <img class="card__img" src="img.jpg">
-                  </div>
-                </div>
-            </section>
-          </div>
-
-          <div class="cards__col">
-            <section class="card">
-                <div class="card__header">
-                <h2 class="card__title">Proin dui leo</h2>
-                <h3 class="card__price">50000 $</h3>
-                </div>
-                <div class="card__content">
-                  <div class="card__text">
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                  </div>
-                  <div class="card__image">
-                    <img class="card__img" src="img.jpg">
-                  </div>
-                </div>
-            </section>
-          </div>
-
-          <div class="cards__col">
-             <section class="card">
-                <div class="card__header">
-                <h2 class="card__title">Proin dui leo</h2>
-                <h3 class="card__price">50000 $</h3>
-                </div>
-                <div class="card__content">
-                  <div class="card__text">
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                    <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-                  </div>
-                  <div class="card__image">
-                    <img class="card__img" src="img.jpg">
-                  </div>
-                </div>
-            </section>
-          </div>
-        </div>
+  <header class="header">
+    <div class="header__content">
+      <h2 class="dest__title">Reykjavík</h2>
+      <p class="dest__quest">Available flights</p>
+    </div>
+  </header>
+<div class="content">
+<div class="menu">
+  <button class="menu__tab">Flights</button>
+  <button class="menu__tab">Lodging</button>
+  <button class="menu__tab">Day Trip</button>
+</div>
+<div class="cards">
+  <div class="cards__row">
+    <section class="cards_filter">
+            
+    </section>
+  <div class="cards__col">
+    <section class="card">
+      <div class="card__header">
+      <h2 class="card__title">Proin dui leo</h2>
+      <div class="card__PriceStar">
+        <h3 class="card__price">50000$</h3>
+      <div class="card__stars">
+        <img class="card__star" src="/img/star.png">
+        <img class="card__star" src="/img/star.png">
+        <img class="card__star" src="/img/star.png">
+        <img class="card__star" src="/img/star.png">
       </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      <div class="grid">
-        <div class="grid__row">
-          <div class="grid__col">
-            <div class="text">
-              <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas fermentum id nulla in iaculis. Vivamus mollis eros non erat mollis tincidunt. Duis volutpat ultrices justo, vel euismod justo elementum nec. Praesent ornare, neque sit amet posuere facilisis, elit erat luctus magna, et vehicula nisl nunc at sem. Ut eros augue, imperdiet eget sagittis non, laoreet in massa. Pellentesque porta id urna sit amet ornare. Nulla vel augue suscipit ante rutrum ullamcorper sed id est. Nullam maximus mollis diam, quis tempus quam molestie in. Duis id purus sed purus convallis mattis. Fusce lobortis arcu a ligula sollicitudin, quis porttitor elit consequat. Nunc non efficitur sapien. Fusce vel sodales nunc.</p>
-
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque malesuada porta leo at vulputate. Suspendisse quis risus augue. Quisque sit amet elit at augue pulvinar eleifend finibus a risus. Ut bibendum et est at fermentum. Duis diam neque, pharetra vel dui in, mollis auctor massa. Phasellus rutrum ex eget sagittis sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam efficitur ac erat quis placerat. Mauris vulputate tincidunt enim ac porta. Pellentesque consequat leo et aliquam iaculis.</p>
-
-              <p>Maecenas ullamcorper porttitor nibh quis semper. Phasellus sed sagittis est. Sed mattis velit eros, vitae dictum ligula venenatis a. Integer eu elit vestibulum, porta urna eu, tristique sapien. Vivamus orci justo, tempus a efficitur at, hendrerit sed risus. Fusce sollicitudin, magna ut interdum ultricies, velit lorem vulputate felis, ut gravida quam lectus et leo. Nullam imperdiet metus non urna consectetur gravida. Phasellus in bibendum tortor. Suspendisse id lacinia lorem. Nullam eget turpis imperdiet, hendrerit tortor eu, ullamcorper arcu. Etiam nec volutpat neque, quis sagittis magna. Donec ante enim, tempus in nulla eget, varius elementum augue. Mauris gravida vehicula dolor, vel varius augue posuere vel.</p>
+      </div>
+    </div>
+  <div class="card__content">
+            <div class="card__text">
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+            </div>
+            <div class="card__image">
+              <img class="card__img" src="img.jpg">
+              <div align="center" class="button_cont"><a class="bookButton" href="flight.html" target="_blank" rel="nofollow noopener">Book</a></div>
             </div>
           </div>
-          <div class="grid__col">
-            <img class="image" src="img.jpg" alt="lorem-ipsum-legustu pálmatrén">
-          </div>
-        </div>
-      </div>
+      </section>
+    </div>
 
+    <div class="cards__col">
+      <section class="card">
+          <div class="card__header">
+          <h2 class="card__title">Proin dui leo</h2>
+          <h3 class="card__price">50000 $</h3>
+          </div>
+          <div class="card__content">
+            <div class="card__text">
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+            </div>
+            <div class="card__image">
+              <img class="card__img" src="img.jpg">
+            </div>
+          </div>
+      </section>
+    </div>
+
+    <div class="cards__col">
+      <section class="card">
+          <div class="card__header">
+          <h2 class="card__title">Proin dui leo</h2>
+          <h3 class="card__price">50000 $</h3>
+          </div>
+          <div class="card__content">
+            <div class="card__text">
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+            </div>
+            <div class="card__image">
+              <img class="card__img" src="img.jpg">
+            </div>
+          </div>
+      </section>
+    </div>
+
+    <div class="cards__col">
+      <section class="card">
+          <div class="card__header">
+          <h2 class="card__title">Proin dui leo</h2>
+          <h3 class="card__price">50000 $</h3>
+          </div>
+          <div class="card__content">
+            <div class="card__text">
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+            </div>
+            <div class="card__image">
+              <img class="card__img" src="img.jpg">
+            </div>
+          </div>
+      </section>
+    </div>
+
+    <div class="cards__col">
+      <section class="card">
+          <div class="card__header">
+          <h2 class="card__title">Proin dui leo</h2>
+          <h3 class="card__price">50000 $</h3>
+          </div>
+          <div class="card__content">
+            <div class="card__text">
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+            </div>
+            <div class="card__image">
+              <img class="card__img" src="img.jpg">
+            </div>
+          </div>
+      </section>
+    </div>
+
+    <div class="cards__col">
+        <section class="card">
+          <div class="card__header">
+          <h2 class="card__title">Proin dui leo</h2>
+          <h3 class="card__price">50000 $</h3>
+          </div>
+          <div class="card__content">
+            <div class="card__text">
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+            </div>
+            <div class="card__image">
+              <img class="card__img" src="img.jpg">
+            </div>
+          </div>
+      </section>
+    </div>
+  </div>
+</div>
+
+<div class="grid">
+  <div class="grid__row">
+    <div class="grid__col">
+      <div class="text">
+        <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas fermentum id nulla in iaculis. Vivamus mollis eros non erat mollis tincidunt. Duis volutpat ultrices justo, vel euismod justo elementum nec. Praesent ornare, neque sit amet posuere facilisis, elit erat luctus magna, et vehicula nisl nunc at sem. Ut eros augue, imperdiet eget sagittis non, laoreet in massa. Pellentesque porta id urna sit amet ornare. Nulla vel augue suscipit ante rutrum ullamcorper sed id est. Nullam maximus mollis diam, quis tempus quam molestie in. Duis id purus sed purus convallis mattis. Fusce lobortis arcu a ligula sollicitudin, quis porttitor elit consequat. Nunc non efficitur sapien. Fusce vel sodales nunc.</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque malesuada porta leo at vulputate. Suspendisse quis risus augue. Quisque sit amet elit at augue pulvinar eleifend finibus a risus. Ut bibendum et est at fermentum. Duis diam neque, pharetra vel dui in, mollis auctor massa. Phasellus rutrum ex eget sagittis sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam efficitur ac erat quis placerat. Mauris vulputate tincidunt enim ac porta. Pellentesque consequat leo et aliquam iaculis.</p>
+
+        <p>Maecenas ullamcorper porttitor nibh quis semper. Phasellus sed sagittis est. Sed mattis velit eros, vitae dictum ligula venenatis a. Integer eu elit vestibulum, porta urna eu, tristique sapien. Vivamus orci justo, tempus a efficitur at, hendrerit sed risus. Fusce sollicitudin, magna ut interdum ultricies, velit lorem vulputate felis, ut gravida quam lectus et leo. Nullam imperdiet metus non urna consectetur gravida. Phasellus in bibendum tortor. Suspendisse id lacinia lorem. Nullam eget turpis imperdiet, hendrerit tortor eu, ullamcorper arcu. Etiam nec volutpat neque, quis sagittis magna. Donec ante enim, tempus in nulla eget, varius elementum augue. Mauris gravida vehicula dolor, vel varius augue posuere vel.</p>
+      </div>
+    </div>
+    <div class="grid__col">
+      <img class="image" src="img.jpg" alt="lorem-ipsum-legustu pálmatrén">
+    </div>
+  </div>
+</div>
+</div>
 </body>
 </html>
