flights og index

--- a/totalTripperLokaverkefni/flight.html
+++ b/totalTripperLokaverkefni/flight.html
@@ -10,46 +10,50 @@
   <header class="header">
     <div class="header__content">
       <h2 class="dest__title">Reykjavík</h2>
-      <p class="dest__quest">Available flights</p>
     </div>
   </header>
 <div class="content">
 <div class="menu">
-  <button class="menu__tab">Flights</button>
-  <button class="menu__tab">Lodging</button>
-  <button class="menu__tab">Day Trip</button>
+  <button class="menu__tab" id="flights">Flights</button>
+  <button class="menu__tab"id="accommodation">Accommodation</button>
+  <button class="menu__tab"id="trip">Day Trip</button>
+</div>
+
+<div class="filter"> 
+  
 </div>
 <div class="cards">
+  <p class="page__title">Available Flights</p>
   <div class="cards__row">
     <section class="cards_filter">
             
     </section>
   <div class="cards__col">
-    <section class="card">
-      <div class="card__header">
+  <section class="card">
+    <div class="card__header">
       <h2 class="card__title">Proin dui leo</h2>
-      <div class="card__PriceStar">
-        <h3 class="card__price">50000$</h3>
-      <div class="card__stars">
-        <img class="card__star" src="/img/star.png">
-        <img class="card__star" src="/img/star.png">
-        <img class="card__star" src="/img/star.png">
-        <img class="card__star" src="/img/star.png">
-      </div>
-      </div>
+    <div class="card__PriceStar">
+      <h3 class="card__price">50000$</h3>
+    <div class="card__stars">
+      <img class="card__star" src="/img/star.png">
+      <img class="card__star" src="/img/star.png">
+      <img class="card__star" src="/img/star.png">
+      <img class="card__star" src="/img/star.png">
     </div>
+    </div> 
+  </div>
   <div class="card__content">
-            <div class="card__text">
-              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-              <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
-            </div>
-            <div class="card__image">
-              <img class="card__img" src="img.jpg">
-              <div align="center" class="button_cont"><a class="bookButton" href="flight.html" target="_blank" rel="nofollow noopener">Book</a></div>
-            </div>
-          </div>
-      </section>
+    <div class="card__text">
+      <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
+      <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
     </div>
+    <div class="card__image">
+      <img class="card__img" src="img.jpg">
+      <div align="center" class="button_cont"><a class="bookButton" href="flight.html" target="_blank" rel="nofollow noopener">Book</a></div>
+    </div>
+  </div>
+  </section>
+</div>
 
     <div class="cards__col">
       <section class="card">
