--- a/totalTripperLokaverkefni/index.html
+++ b/totalTripperLokaverkefni/index.html
@@ -12,10 +12,11 @@
     <h1>Total Tripper</h1>
 </header>
 <body>
+<div class="content">
 <div class="searchBox">
     <h2>Hi, where would you like to travel?</h2>
     <div class="search">
-        <input class="place" type="text"  name="search">
+        <input class="place" type="text"  name="search" id="search">
         <input type="text" class="TinyPicker" id="startDate">
         <input type="text" class="TinyPicker" id="endDate">
         <div class="guests" id="toggle"> 
@@ -47,6 +48,7 @@
 
         </div>
     </div>
+</div>
 </div>
 </div>
 </body>
