bætt filter og search á content síðu
search ekki fullt klára, filter vantar gögn

--- a/totalTripperLokaverkefni/flight.html
+++ b/totalTripperLokaverkefni/flight.html
@@ -18,9 +18,55 @@
   <button class="menu__tab"id="accommodation">Accommodation</button>
   <button class="menu__tab"id="trip">Day Trip</button>
 </div>
-
+<div class="filter__content">
 <div class="filter"> 
-  
+  <!-- <div class="search">
+    <h2>Hi, where would you like to travel?</h2>
+    <div class="search__content">
+        <input class="place" type="text"  name="search" id="search">
+        <input type="text" class="TinyPicker" id="startDate">
+        <input type="text" class="TinyPicker" id="endDate">
+        <div class="guests" id="toggle"> 
+            <p class="display"> 1 adult </p><p>•</p>
+            <p class="display"> 0 children </p><p>•</p>
+            <p class="display"> 1 room </p>
+        </div>
+        <div class="button_cont" align="center"><a class="searchButton" href="flight.html" target="_blank" rel="nofollow noopener">Lets go!</a></div>
+    </div>
+<div class="hide" id="hidden">
+    <div class="popUpGuests">
+        <div class="choseGuest">
+            <p class="group">Adults </p> 
+            <button class="minus" id="0" >-</button>
+            <p id="1">1</p>
+            <button class="plus" id="0">+</button>
+        </div>
+        <div class="choseGuest">
+            <p class="group">Children </p>
+            <button class="minus" id="1" >-</button>
+            <p id="2">0</p>
+            <button class="plus" id="1">+</button>
+        </div>
+        <div class="choseGuest">
+            <p class="group">Rooms </p>
+            <button class="minus" id="2" >-</button>
+            <p id="3">1</p>
+            <button class="plus" id="2">+</button>
+
+        </div>
+    </div>
+</div>
+</div>  -->
+<div class="filter__select">
+  <h3>Filter by: </h3>
+  <div class="filter__type">
+    <h4>Fun things to do </h4>
+    <label class="container"> Outdoors
+      <input type="checkbox"  checked="checked">
+      <span class="checkmark"></span>
+    </label>
+</div>
+</div>
 </div>
 <div class="cards">
   <p class="page__title">Available Flights</p>
@@ -146,7 +192,7 @@
     </div>
   </div>
 </div>
-
+</div>
 <div class="grid">
   <div class="grid__row">
     <div class="grid__col">
