--- a/totalTripperLokaverkefni/index.html
+++ b/totalTripperLokaverkefni/index.html
@@ -12,7 +12,7 @@
     <h1>Total Tripper</h1>
 </header>
 <body>
-<div class="content">
+<div class="index__content">
 <div class="searchBox">
     <h2>Hi, where would you like to travel?</h2>
     <div class="search">
