Hægt að leita í öllu allstaðar í test.html

--- a/javascript/test.html
+++ b/javascript/test.html
@@ -15,12 +15,12 @@
             <button class="get">GetTrips</button>
     </div>
     <div class="main__search">
-        <form action="#" class="search__form">
+        <form  class="search__form">
             <label class="stringSearchLabel" for="item">Item</label>
             <input type="text" name="item" >
             <label for="date">date  </label>
             <input type="date" name="date" id="" min="2020-04-04" value="2020-04-04" >
-            <input type="submit" value="Search">
+            <input class="form__submit" type="button" value="Search">
         </form>
     </div>
     <section class="main__section">
