--- a/totalMerger/flight.html
+++ b/totalMerger/flight.html
@@ -76,19 +76,27 @@
     <section class="hotel__list">
       <div class="hotel">
       <div class="hotel__info">
+        <div class="content__right">
         <div class="hotel__image">
-          <img class="image__image" src="./img/hotelimage/hotelsaga.jpg" alt="Hotel Image">
+          <img class="image__image" src="./img/hotelimage/4-star/hotel11.jpg" alt="Hotel Image">
         </div>
         <div class="info__info">
           <h2 class="hotel__name">Hotel Saga</h2>
           <span class="hotel__address">Reykjavík</span>
         </div>
+      </div>
+      <div class="content__left">
         <div class="hotel__price">
           <span class="hotel__rating">
+            <img class="hotel__stars" src="./img/star.png" alt="Hotel rating">
+            <img class="hotel__stars" src="./img/star.png" alt="Hotel rating">
+            <img class="hotel__stars" src="./img/star.png" alt="Hotel rating">
             <img class="hotel__stars" src="./img/star.png" alt="Hotel rating">
           </span>
           <span class="room__price">13000ISK</span>
         </div>
+        <div class="bookButton">velja herbergi</div>
+      </div>
       </div>
       </div>
     </section>
