--- a/totalMerger/index.html
+++ b/totalMerger/index.html
@@ -8,17 +8,22 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto:700" rel="stylesheet"> 
     <title>Total Tripper</title>
 </head>
-<header>
-    <h1>Total Tripper</h1>
-</header>
+<header class="header">
+    <div class="header__content">
+      <a class="index__portal" href="index.html">totaltripper</a>
+    </div>
+  </header>
 <body>
+<div class="index">
 <div class="index__content">
-<div class="searchBox">
-    <h2>Hi, where would you like to travel?</h2>
-    <div class="search">
-        <select class="place" "  name="search" id="search">
+    <div class="index__message">
+        <h2>Hi, where would you like to travel?</h2>
+    </div>
+    <div class="index__search">
+        <select class="place"  name="search" id="search">
 
         </select>
+
         <input type="text" class="TinyPicker" id="startDate">
         <input type="text" class="TinyPicker" id="endDate">
         <div class="guests" id="toggle"> 
