--- a/totalMerger/flight.html
+++ b/totalMerger/flight.html
@@ -108,7 +108,29 @@
 </div>
 
 <div id="tab3Content">
-
+  <div class="trips">
+    <div class="trips__row">
+      <section class="trips__list">
+        <div class="trip">
+          <div class="trip__info">
+            <div class="trip__image">
+              <img class="image__image" src="./img/tripImage/trip1.jpg">
+            </div>
+            <div class="info__info">
+              <span class="info__name">Boat Ride</div>
+              <span class="info__location">West World</span>
+              <span class="info__time">Starts: 13:00</span>
+              <span class="info__duration">Duration: 3k 50m</span>
+            <div class="trip__price">
+              <span class="price__price">13000 kr.</span>
+              <span class="trip__total">39000 kr.</span>
+              <button class="bookButton"> book trip</button>
+            </div>
+            </div>
+          </div>
+      </section>
+    </div>
+  </div>
 </div>
 <script src="./scripts/helpers/helpers.js"></script> 
 <script src="./scripts/helpers/Random.js"></script> 
@@ -123,5 +145,6 @@
 <script src="./scripts/managers/MainManager.js"></script>
 <script src="./scripts/view/flightView.js"></script>
 <script src="./scripts/view/hotelView.js"></script>
+<script src="./scripts/view/tripView.js"></script>
 </body>
 </html>
