--- a/totalMerger/flight.html
+++ b/totalMerger/flight.html
@@ -17,7 +17,7 @@
   </header>
 <div class="content">
 <div class="menu">
-  <div class="menu__tab" id="tab1">Flights</div>
+  <div class="menu__tab tab__active" id="tab1">Flights</div>
   <div class="menu__tab" id="tab2" >Accommodation</div>
   <div class="menu__tab" id="tab3">Day Trip</div>
   <div class="menu__tab" id="tab4">Your Package</div>
