bætt við destination picker

--- a/totalMerger/index.html
+++ b/totalMerger/index.html
@@ -20,10 +20,12 @@
         <h2>Hi, where would you like to travel?</h2>
     </div>
     <div class="index__search">
-        <select class="place"  name="search" id="search">
+        <select class="place"  name="search" id="origin">
 
         </select>
+        <select class="place" id="dest">
 
+        </select>
         <input type="text" class="TinyPicker" id="startDate">
         <input type="text" class="TinyPicker" id="endDate">
         <div class="guests" id="toggle"> 
