bætt search á content síðu

--- a/totalMerger/index.html
+++ b/totalMerger/index.html
@@ -73,7 +73,7 @@
         lastBox: document.getElementById('endDate'),
         months: 2,
         days: ['Su','Mo','Tu','We','Th','Fr','Sa'],
-        local: 'en-US',
+        local: 'en-UK',
         err: function(){alert('err');}
     });
     window.dp.init();  
