Vá var að gera algjöra steypu í að birta flugin, lagaði það

--- a/totalMerger/flight.html
+++ b/totalMerger/flight.html
@@ -125,6 +125,7 @@
 <script src="./scripts/view/hotelView.js"></script>
 <script src="./scripts/view/tripView.js"></script>
 <script src="tiny-picker-master/index.js"></script>
+<script src="./scripts/view/packageView.js"></script>
 <script>
     window.dp = new TinyPicker({
         firstBox:document.getElementById('startDate'),
