--- a/totalMerger/flight.html
+++ b/totalMerger/flight.html
@@ -32,7 +32,7 @@
                 <p class="display"> 0 children </p><p>•</p>
                 <p class="display"> 1 room </p>
             </div>
-            <div class="button_cont" align="center"><a class="searchButton" href="#">Lets go!</a></div>
+            <div class="button_cont" align="center"><a class="searchButton" href="#">search</a></div>
         </div>
     <div class="hide" id="hidden">
         <div class="popUpGuests">
